# file-factory

./: .gitignore  LICENSE  README.md  pyproject.toml
file-factory/: factories.py
filefactory/: __init__.py  factories.py
