[project]
name = "File-Factory"
version = "0.0.1"
description = "A helper library for creating and loading "
readme = "README.md"
authors = [
    { name = "DragonMoffon", email = "opensource@auradev.nz" },
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.12"
dependencies = []
[project.optional-dependencies]
dev = [
    "nuitka>=2.4.8",
    "imageio>=2.35",
    "pytest==7.2.1",
    "flake8==6.0.0",
    "autopep8==2.0.1",
    "ruff",
    "black"
]